@@ -68,7 +68,7 @@ public class IOHandler extends MouseAdapter {
 			case MouseEvent.BUTTON1 -> {
 				LMBDown = true;
 				if (!isCtrlDown && !isShiftDown){
-					if (!isCtrlDown)
+					if (!isShiftDown)
 						gh.selectedEntityTiles.clear();
 					gh.selectedTiles.clear();
 				}
@@ -250,11 +250,14 @@ public class IOHandler extends MouseAdapter {
 			}
 		}
 		for(Entity en : gh.entities) {
-			if(currentHexagon.getGridPoint().equals(
-				en.getTile().getGridPoint()
-			)) {
-				gh.addSelectedEntityTile(currentHexagon);
-				hasSelectedEntity = true;
+			for (Hexagon occTile : en.getOccupiedTiles()){
+
+				if(currentHexagon.getGridPoint().equals(
+					occTile.getGridPoint()
+				)) {
+					gh.addSelectedEntityTile(en.getTile());
+					hasSelectedEntity = true;
+				}
 			}
 		}
 	}
@@ -296,18 +299,10 @@ public class IOHandler extends MouseAdapter {
 			&& selectedEntity instanceof Character
 			&& isShiftDown
 		) {
-			// gh.gm.moveCharacter(currentHexagon, (entities.Character)selectedEntity);
-			if (gh.selectedTiles.get(0) != null && gh.selectedEntityTiles.get(0) != null) {
-					Entity selectedEntity2 = gh.selectEntity(gh.selectedEntityTiles.get(0));
-					if (selectedEntity2 instanceof Character) {
+			gh.gm.moveCharacter(currentHexagon, (entities.Character)selectedEntity);
+			
+			AStar.run(gh.selectedEntityTiles.getFirst(), currentHexagon, gh);
 
-						AStar.run(gh.selectedEntityTiles.get(0), gh.selectedTiles.get(0), gh);
-					} else {
-						System.out.println("No character selected.");
-					}
-				} else {
-					System.out.println("Select both a character and destination tile.");
-				}
 		}
 	}
 }
